# frog-klan

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: releae.yml  release.yml
installers/linux/: make_appimage.sh
installers/macos/: make_pkg.sh  make_pkg_from_app.sh
installers/nsis/: installer.msi
scripts/: release.py
src/: -moron_to_monetise_free_1_txt.txt  frogklan.cpp  main.cpp  md5.cpp  md5.h  net.cpp  net.h  sip.cpp  sip.h
